ikiwiki (3.01) UNRELEASED; urgency=low

  * ikiwiki-makerepo: Fix injecting of empty mercurial and bzr repositories.
    Closes: #510518
  * Fix documentation about git hook to use right name. Closes: #510393

 -- Joey Hess <joeyh@debian.org>  Fri, 02 Jan 2009 14:12:16 -0500

ikiwiki (3.00) unstable; urgency=low

  * Remove support for GlobLists.
  * Remove support for configuring allowed attachments, locked pages,
    and banned users from the admin preferences page. These can only be
    controlled via the setup file now.
  * ikiwiki-transition moveprefs can be used to move the above
    admin preferences into a setup file.
  * prefix_directives and aggregate_internal are now turned on by default.
  * ikiwiki-transition prefix_directives syntax changed
  * googlecalendar: removed this deprecated plugin. Use htmlscrubber_skip
    instead.
  * embed: This plugin is deprecated, use htmlscrubber_skip instead.
    Closes: ##462970.
  * Version 3.00 of the plugin API.
  * Replace blank OpenID placeholder logo with an unofficial OpenID
    logo developed by Anna Hess. The official logo does not seem destined to
    be free.
  * comments: Add cache avoidance.
  * htmlbalance: Demand-load HTML::TreeBuilder to avoid failing test suite
    if it is not present.
  * French translation update from Philippe Batailler. Closes: #510216
  * websetup: Avoid a crash when a new array setup item has been added in 
    a new ikiwiki release, and is thus not present in the setup file yet.

 -- Joey Hess <joeyh@debian.org>  Wed, 31 Dec 2008 15:17:47 -0500

ikiwiki (2.72) unstable; urgency=low

  * Avoid comments in recentchanges being broken links (smcv)
  * Add deprecation warning for GlobLists, which will stop working in 3.0.
  * camelcase: Add camelcase_ignore setting.
  * googlecalendar: Add runtime deprecation warning.
  * comments: Deal with users entering unqualified or partial urls.
  * inline: Run format hook first, to ensure other format hooks can affect