@@ -3,6 +3,8 @@ ikiwiki (3.01) UNRELEASED; urgency=low
   * ikiwiki-makerepo: Fix injecting of empty mercurial and bzr repositories.
     Closes: #510518
   * Fix documentation about git hook to use right name. Closes: #510393
+  * yesno: Always accept English even when localised.
+  * yesno: Also accept 1 and 0 as input.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 02 Jan 2009 14:12:16 -0500
 
